ImpressCMS ChangeLog
=== ImpressCMS 2.0.0 Alpha 6 ===
Release date: 
DB Version: 44
Build Version: 

Changes:

Improvements:
* #884 - further PHP 5.4 Strict compliance (from 1.3.9)
* #751 - switch to Google Analytics universal (from 1.3.9)
* #868 - removed duplicate value URI.AllowedSchemes in HTMLPurifier configuration (from 1.3.9)

Fixes:


=== ImpressCMS 2.0.0 Alpha 5 ===
Release date: 7 April 2015
DB Version: 44
Build Version: 74

Security Fix:
* From 1.3.7 - Cross site scripting (XSS) - system image manager CVE-2014-4036

Changes:

Improvements:
Private Messaging Improvements
* #747 - New mobile-friendly personal message system
* #812 - HTML is out of the code and into templates
* #813 - Result is provided in the UI 
* #816 - New pop-up is used in the admin area
* #753 - Textsanitizer plugins work in messages
* #814 - members cannot send a message to themselves
* #815 - HTML codes are rendered, not display

Fixes:


=== ImpressCMS 2.0.0 Alpha 4 ===
Release date: 15 Apr 2014
DB Version: 44
Build Version: 73

Changes:
* Integration of changes in 1.3.5, 1.3.6 and 1.3.6.1
* Removed support for IE6


Improvements:
* PHP 5.4 strict compliance

Fixes:


ImpressCMS 1.3.6
-------------------------------
Date: 30 Jan 2014
Revision: 12407
DB Version: 43
Build Version: 71

Fixed:
#759 - Error during Installation on PHP 5.5 (opcache enabled) (Steve Kenow)
#760 - Fatal error in autotasks when filepath could contain escape sequence (Julian Egelstaff)

Security Fix:
#761 - Deletion of arbitrary files in the system - image editor (Pedro Ribeiro pedrib@gmail.com)
#762 - Cross site scripting (XSS) - misc.php (Pedro Ribeiro pedrib@gmail.com)
#763 - Cross site scripting (XSS) - tplsets (Pedro Ribeiro pedrib@gmail.com)

Improved

Added:
#96, #643, #755 Complete support for PDO as the database connection (Steve Kenow)


** Complete list of tickets addressed in the 1.3.6 Milestone - https://www.assembla.com/spaces/impresscms/milestones/4129593-impresscms-1-3-6
